# budgetPlanner

./: .gitignore  README.md  manage.py  pyproject.toml
accProject/: asgi.py  settings.py  urls.py  wsgi.py
accProject/globalStatic/css/: base.css
accProject/globalTemplates/: base.html
accProject/globalTemplates/layout/: navbar.html
app/: settings.py
categories/: urls.py  views.py
categories/templates/categories/: categories.html
manager/: urls.py  views.py
manager/templates/manager/: manager.html
