[project]
name = "acc"
version = "0.1.0"
description = ""
authors = [
    {name = "martins021",email = "martins.miesnieks@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django (>=5.1.6,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
